Adding fully functional lasagna recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+
+    <img src="https://www.allrecipes.com/thmb/XKffKwh3oLcqL-TNHd-jikPddJ0=/800x533/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/CheesyHamburgerRiceCasserole4x3-f636fed940d442e093907422aa4c2fb4.jpg" height = "300" width = "300">
+    <p></p>
+    <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Tomatoes</li>
+        <li>Fresh Herbs</li>
+        <li>Sugar</li>
+        <li>Spices & Seasoning</li>
+        <li>Noodles</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
+    <p></p>
+    <ol>
+        <li>Cook the Meat</li>
+        <li>Cook the Noodles</li>
+        <li>Make the cheese layer</li>
+        <li>Assemble the Lasagna</li>
+        <li>Bake the Lasagna</li>
+    </ol>
+
 </body>
 </html>
