Added missing "Instructions" heading

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -25,6 +25,7 @@
         <li>Eggs</li>
     </ul>
     <p></p>
+    <h2>Instructions</h2>
     <ol>
         <li>Cook the Meat</li>
         <li>Cook the Noodles</li>
