Added visual headings and centred elements

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,13 +8,17 @@
 
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <div class = "Main-Heading">
+        <h1>Lasagna</h1>
+    </div>
 
     <img src="https://www.allrecipes.com/thmb/XKffKwh3oLcqL-TNHd-jikPddJ0=/800x533/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/CheesyHamburgerRiceCasserole4x3-f636fed940d442e093907422aa4c2fb4.jpg" height = "300" width = "300">
     <p></p>
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
     <p></p>
-    <h2>Ingredients</h2>
+    <div class = "Ingredients">
+        <h2>Ingredients</h2>
+    </div>
     <ul>
         <li>Meat</li>
         <li>Onion</li>
@@ -27,7 +31,9 @@
         <li>Eggs</li>
     </ul>
     <p></p>
-    <h2>Instructions</h2>
+    <div class = "Instructions">
+        <h2>Instructions</h2>
+    </div>
     <ol>
         <li>Cook the Meat</li>
         <li>Cook the Noodles</li>
